Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-277

Reconnection not working for sockets

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • Appender
    • None
    • All

    Description

      ReconnectionDelay is not working for XMLSocketAppender. This method is
      backwards:

      void SocketAppenderSkeleton::fireConnector()
      {
      synchronized sync(mutex);
      if (thread.isActive())

      { thread.run(monitor, this); }

      }

      The if condition is backwards. The code currently says it the thread is already running then start it. You need a ! on the condition.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            dalewking Dale King
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: