LOGCXX-277: Reconnection not working for sockets